# expose

./: .editorconfig  .gitignore  Expose.slnx  ReadMe.md  build.fsx
.cursor/rules/: project-rules.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: ~expose.toml  ~frontend.toml  ~update-cert.sh
docs/: Workflow Sample.cs  yfinance.md
podman/: compose.yml  ~compose.override.yml
podman/backend/: Containerfile
podman/exp-ai/: Containerfile
podman/exp-yfinance/: Containerfile
podman/frontend/: Containerfile  expose.conf  nginx.conf
podman/mariadb/: Containerfile  mariadb.repo  mariadb.sh  my.cnf
src/Expose/: Expose.csproj  Program.cs
src/Expose.FSharp/: Expose.FSharp.fsproj  Library.fs
src/Expose/Properties/: launchSettings.json
src/expose-ai/: .ncurc.mjs  eslint.config.mjs  jest.config.cjs  package-lock.json  package.json  tsconfig.json
src/expose-ai/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  main.ts  test.ts
src/expose-ai/test/: app.e2e-spec.ts
src/expose-backend/Expose/: Expose.csproj  Program.cs  appsettings.Development.json  appsettings.json
src/expose-backend/Expose.Automation/: Expose.Automation.csproj
src/expose-backend/Expose.FSharp/: Expose.FSharp.fsproj  Library.fs
src/expose-backend/Expose/Properties/: launchSettings.json
src/expose-backend/Expose/Protos/: yfinance.proto
src/expose-backend/Expose/Services/: YFinanceQuote.cs  YFinanceQuoteCache.cs  YFinanceServiceOptions.cs  YFinanceStreamWorker.cs
src/expose-frontend/: .ncurc.mjs  eslint-config-preact.d.ts  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite-plugin-ui5-assets.ts  vite.config.ts
src/expose-frontend/src/: main.styl  main.tsx  ui5-imports.d.ts  ui5-side-effect-imports.d.ts
src/expose-frontend/src/_framework/: flex.styl  flex.tsx  hooks.ts  i18n.tsx  utils.styl
src/expose-frontend/src/_i18n/: Czech_CZ.ts  English_GB.ts  English_US.ts  German_CH.ts  German_DE.ts  _i18n.ts
src/expose-frontend/src/app/: colors.styl  constants.ts  fonts.styl  locales.ts  screen.styl  store.ts
src/expose-yfinance/: pyproject.toml
src/expose-yfinance/src/expose_yfinance/: __init__.py  config.py  grpc_server.py  main.py  models.py  proto_codegen.py  yf_provider.py
src/expose-yfinance/tests/: test_grpc_stream.py  test_yf_provider.py
tests/Expose.Tests/: Expose.Tests.csproj  Expose.Tests.fsproj  Tests.fs  YFinanceQuoteCacheTests.cs
(+22 files in other folders)
